--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
   --blue_: #404bbf;
   --green: #31d0aa;
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --cornflower: #e7e9fc;
+  --navyblue: #2e2f42;
 }
 
 p,
@@ -92,6 +94,10 @@ body {
   padding-right: 26px;
 }
 
+.item-mail:is(:hover, :focus) {
+  transition: opacity 250ms var(--timing-function);
+}
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
@@ -117,15 +123,21 @@ body {
 
 .item:is(:hover, :focus) {
   color: #404bbf;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .item-mail {
   color: #434455;
   white-space: nowrap;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .item-mail:is(:hover, :focus) {
   color: #404bbf;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .cont {
@@ -207,10 +219,68 @@ body {
   border-radius: 4px;
   text-align: center;
   padding: 16px 32px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .button-main:is(:hover, :focus) {
   background-color: var(--blue_);
+  transition-duration: 250ms;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 1;
+  visibility: visible;
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  background-color: var(--cornflower);
+  fill: var(--navyblue);
+  box-sizing: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  cursor: pointer;
+  transition-property: fill, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
+}
+
+.modal-button:is(:hover, :focus) {
+  fill: var(--white);
+  background-color: var(--blue_);
+}
+
+.modal {
+  position: relative;
+  width: 408px;
+  height: 576px;
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  top: 88px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /***-----------Section2 -INDEX.HTML-------------***/
@@ -238,6 +308,8 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .main-p {
@@ -349,7 +421,7 @@ body {
 
 .link-item:is(:hover, :focus) {
   background-color: var(--blue_);
-  transition-duration: 400ms;
+  transition-duration: 250ms;
 }
 
 .soc-icon {
@@ -390,7 +462,7 @@ body {
 .link-section-five:is(:hover, :focus) {
   fill: var(--blue_);
   border-color: var(--blue_);
-  transition-duration: 400ms;
+  transition-duration: 250ms;
 }
 
 /***---------Footer--INDEX.HTML------------***/
@@ -457,7 +529,7 @@ body {
 
 .footer-social .footer-icon-list .li-icon .link-item:is(:hover, :focus) {
   background-color: var(--green);
-  transition-duration: 400ms;
+  transition-duration: 250ms;
 }
 
 .div-footer-svg {
@@ -515,7 +587,7 @@ body {
   flex-grow: 0;
   align-items: flex-start;
   padding: 12px 24px;
-  transition-duration: 400ms;
+  transition-duration: 250ms;
 }
 
 .section-portfolio .button_:is(:hover, :focus) {
@@ -533,4 +605,24 @@ body {
   gap: 20px;
 }
 
-/* end */
+.div-wraper {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  padding: 40px 32px 164px 32px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(0, 100%);
+  transition: 250ms var(--timing-function);
+}
+
+.li-solid:hover .overlay {
+  transform: translate(0, 0);
+}
