--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,15 @@
   --navyblue: #2e2f42;
 }
 
+@keyframes translator {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  100% {
+    transform: translate(39%);
+  }
+}
+
 p,
 h1,
 h2,
@@ -228,7 +237,9 @@ body {
 }
 
 .backdrop {
+  display: flex;
   position: fixed;
+
   top: 0;
   left: 0;
   width: 100%;
@@ -271,16 +282,20 @@ body {
 }
 
 .modal {
-  position: relative;
+  position: absolute;
   width: 408px;
   height: 576px;
-  background: #fcfcfc;
+  background-color: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  top: 88px;
-  margin-left: auto;
-  margin-right: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition-timing-function: var(--timing-function);
+  /* animation-name: translator;
+  animation-duration: 2000ms;
+  animation-delay: 1000ms; */
 }
 
 /***-----------Section2 -INDEX.HTML-------------***/
