--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,19 @@
 
 @keyframes translator {
   0% {
-    transform: translate(0px, 0px);
+    transform: translate(-50%, -50);
   }
   100% {
-    transform: translate(39%);
+    transform: translateY(-150%);
+  }
+}
+
+@keyframes active {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
@@ -87,9 +96,6 @@ body {
   border-bottom: 1px solid #e7e9fc;
 }
 
-.header-box {
-}
-
 .nav-box {
   margin-right: auto;
 }
@@ -101,10 +107,6 @@ body {
 
 .addres-gap {
   padding-right: 26px;
-}
-
-.item-mail:is(:hover, :focus) {
-  transition: opacity 250ms var(--timing-function);
 }
 
 .logo {
@@ -128,40 +130,46 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
-}
-
-.item:is(:hover, :focus) {
-  color: #404bbf;
+  transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: var(--timing-function);
+}
+
+.item:hover,
+.item:focus {
+  color: #404bbf;
 }
 
 .item-mail {
   color: #434455;
+  padding-right: 15px;
+  font-family: "Roboto";
+  font-style: normal;
   white-space: nowrap;
-  transition-duration: 250ms;
-  transition-timing-function: var(--timing-function);
-}
-
-.item-mail:is(:hover, :focus) {
-  color: #404bbf;
-  transition-duration: 250ms;
-  transition-timing-function: var(--timing-function);
-}
-
-.cont {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
   padding-right: 15px;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
+}
+
+.item-mail:hover,
+.item-mail:focus {
+  color: var(--blue_);
 }
 
 .line {
   position: relative;
 }
 
-.line::after {
+.active {
+  animation: active 250ms;
+  color: var(--blue_);
+}
+
+.active::after {
   content: "";
   position: absolute;
   top: 43px;
@@ -169,13 +177,9 @@ body {
   width: 100%;
   height: 4px;
   border-radius: 2px;
+  transition-property: color;
+  transition-duration: 250ms;
   background-color: var(--blue);
-  opacity: 0;
-  transition: opacity 250ms var(--timing-function);
-}
-
-.line:hover::after {
-  opacity: 1;
 }
 
 /**--Section1 -INDEX.HTML--*/
@@ -210,9 +214,6 @@ body {
   color: #ffffff;
 }
 
-.effsolutions-one {
-}
-
 .section-one-button {
   margin-top: 48px;
 }
@@ -229,76 +230,16 @@ body {
   text-align: center;
   padding: 16px 32px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition-property: color, background-color;
+  transition-duration: 250ms;
 }
 
 .button-main:is(:hover, :focus) {
   background-color: var(--blue_);
-  transition-duration: 250ms;
 }
 
-.backdrop {
-  display: flex;
-  position: fixed;
+/***-----------Section2-INDEX.HTML-------------***/
 
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(46, 47, 66, 0.4);
-  opacity: 1;
-  visibility: visible;
-}
-
-.backdrop.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-}
-
-.modal-button {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  width: 24px;
-  height: 24px;
-  background-color: var(--cornflower);
-  fill: var(--navyblue);
-  box-sizing: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  display: block;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  cursor: pointer;
-  transition-property: fill, background-color;
-  transition-duration: 250ms;
-  transition-timing-function: var(--timing-function);
-}
-
-.modal-button:is(:hover, :focus) {
-  fill: var(--white);
-  background-color: var(--blue_);
-}
-
-.modal {
-  position: absolute;
-  width: 408px;
-  height: 576px;
-  background-color: #fcfcfc;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition-timing-function: var(--timing-function);
-  /* animation-name: translator;
-  animation-duration: 2000ms;
-  animation-delay: 1000ms; */
-}
-
-/***-----------Section2 -INDEX.HTML-------------***/
 .section-two {
   padding: 120px 0;
 }
@@ -313,9 +254,6 @@ body {
   width: 264px;
 }
 
-.div-section-two {
-}
-
 .list-item {
   margin-bottom: 8px;
   font-weight: 500;
@@ -323,6 +261,7 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  transition-property: color, background-color;
   transition-duration: 250ms;
   transition-timing-function: var(--timing-function);
 }
@@ -432,11 +371,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition-property: background-color;
+  transition-duration: 250ms;
 }
 
 .link-item:is(:hover, :focus) {
   background-color: var(--blue_);
-  transition-duration: 250ms;
 }
 
 .soc-icon {
@@ -472,12 +412,13 @@ body {
   align-items: center;
   justify-content: center;
   fill: #8e8f99;
+  transition-property: fill, border-colo;
+  transition-duration: 250ms;
 }
 
 .link-section-five:is(:hover, :focus) {
   fill: var(--blue_);
   border-color: var(--blue_);
-  transition-duration: 250ms;
 }
 
 /***---------Footer--INDEX.HTML------------***/
@@ -495,7 +436,6 @@ body {
 .footer-container {
   display: flex;
   margin-right: 120px;
-
   flex-direction: column;
 }
 
@@ -540,11 +480,13 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .footer-social .footer-icon-list .li-icon .link-item:is(:hover, :focus) {
   background-color: var(--green);
-  transition-duration: 250ms;
 }
 
 .div-footer-svg {
@@ -602,7 +544,9 @@ body {
   flex-grow: 0;
   align-items: flex-start;
   padding: 12px 24px;
+  transition-property: color, background-color;
   transition-duration: 250ms;
+  transition: color 250ms;
 }
 
 .section-portfolio .button_:is(:hover, :focus) {
@@ -628,6 +572,9 @@ body {
 .overlay {
   background-color: #4d5ae5;
   color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   padding: 40px 32px 164px 32px;
   width: 100%;
   height: 100%;
@@ -640,4 +587,68 @@ body {
 
 .li-solid:hover .overlay {
   transform: translate(0, 0);
+}
+
+/***-------------MODAL_WINDOW------------***/
+
+.backdrop {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 1;
+  visibility: visible;
+  transition-property: opacity;
+  transition: opacity 250ms;
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  box-sizing: border-box;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--cornflower);
+  fill: var(--navyblue);
+  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition-property: background-color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
+}
+
+.modal-button:is(:hover, :focus) {
+  fill: var(--white);
+  background-color: var(--blue_);
+}
+
+.modal {
+  position: absolute;
+  width: 408px;
+  height: 576px;
+  background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition-property: background-color;
+  transition: background-color 500ms;
+  transition-timing-function: var(--timing-function);
 }
