--- a/css/styles.css
+++ b/css/styles.css
@@ -647,8 +647,11 @@ body {
   border-radius: 4px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  transition-property: background-color;
-  transition: background-color 500ms;
-  transition-timing-function: var(--timing-function);
+  transition-property: transform;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
 }
