--- a/css/styles.css
+++ b/css/styles.css
@@ -544,11 +544,10 @@ body {
   flex-grow: 0;
   align-items: flex-start;
   padding: 12px 24px;
-  transition-property: background-color, color;
   transition-duration: 250ms;
 }
 
-.section-portfolio .button_:is(:hover, :focus) {
+.button_:is(:hover, :focus) {
   color: var(--white);
   background-color: var(--blue_);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
